--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Teste fron-end</title>
+    <base href="/">
+
+    <link rel="stylesheet" href="node_modules/semantic-ui/semantic.min.css" type="text/css">
 </head>
 <body>
 
+<main class="ui pusher">
+    <div class="ui page tela-cheia">
+        <div class="row">
+            <div class="desktop-full mobile-full tablet-full view-container">
+                <div ng-view class="view-frame"></div>
+            </div>
+        </div>
+    </div>
+</main>
+
 <script src="node_modules/requirejs/require.js"></script>
 <script src="main.js"></script>
+<script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+<script src="node_modules/semantic-ui/semantic.min.js"></script>
 </body>
 </html>
